test/fail/big_ret59.v3
//@execute 0=91; 1=100; 10=181
def main(a: int) -> int {
	var x = foo(1, long.!(2), 3, long.!(4), 5 + a, long.!(6 + a), 7 + a, long.!(8 + a), 9 + a, long.!(10 + a), 11 + a, long.!(12 + a), 13 + a);
	return x.0 + int.!(x.1) + x.2 + int.!(x.3) + x.4 + int.!(x.5) + x.6 + int.!(x.7) + x.8 + int.!(x.9) + x.10 + int.!(x.11) + x.12;
}
def foo(a: int, b: long, c: int, d: long, e: int, f: long, g: int, h: long, i: int, j: long, k: int, l: long, m: int)
		-> (int, long, int, long, int, long, int, long, int, long, int, long, int) {
	return (a, l, c, b, e, d, g, f, i, h, k, j, m);
}
